chore: update devnotes (#97)
## Summary
- Update devnotes based on onboarding doc. 

## Checklist
- [ ] Added Unit Tests
- [ ] Covered by existing CI
- [ ] Integration tested
- [ ] Documentation update



<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **Documentation**
	- Enhanced setup instructions for the Chronon project.
- Expanded prerequisites section with environment variable
configurations.
- Clarified installation instructions for Thrift, emphasizing version
compatibility.
	- Added guidance for installing Java, Scala, and Python using `asdf`.
- Restructured IntelliJ configuration instructions for improved clarity.
- Updated troubleshooting section with commands for project cleaning and
assembly.
- Elaborated on the release process for artifact publishing and code
pushing.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->